gcc/testsuite/c-c++-common/cilk-plus/CK/pr79428-7.c
/* PR c/79428 */
/* { dg-options "-fcilkplus" } */
#pragma simd /* { dg-error "must be inside a function" } */
